--- a/.env
+++ b/.env
@@ -3,10 +3,10 @@ APP_DEBUG=true
 APP_KEY=b809vCwvtawRbsG0BmP1tWgnlXQypSKf
 APP_URL=http://localhost
 
-DB_HOST=127.0.0.1
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_HOST=51.15.96.105
+DB_DATABASE=home
+DB_USERNAME=root
+DB_PASSWORD=homestead
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
