--- a/.env
+++ b/.env
@@ -3,10 +3,10 @@ APP_DEBUG=true
 APP_KEY=b809vCwvtawRbsG0BmP1tWgnlXQypSKf
 APP_URL=http://localhost
 
-DB_HOST=51.15.96.105
+DB_HOST=localhost
 DB_DATABASE=home
 DB_USERNAME=root
-DB_PASSWORD=homestead
+DB_PASSWORD=
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
